--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Star Wars - Personagens</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 </head>
 <body>
   <canvas id="starfield"></canvas>
+
   <div class="container">
     <h1>Buscar Personagem</h1>
 
-    <!-- Envolvendo input e sugestões -->
     <div class="search-wrapper">
-      <input type="text" id="searchInput" placeholder="Digite o nome do personagem">
+      <input type="text" id="searchInput" placeholder="Digite o nome do personagem" autocomplete="off" />
       <div id="suggestions"></div>
     </div>
 
     <button id="searchButton">Pesquisar</button>
-    
+
     <div id="error" style="display:none; color: red; margin-top: 1rem;"></div>
 
-    <div id="characterInfo" class="character-info" style="display: none;">
-      <img id="characterImage" src="" alt="Imagem do personagem">
+    <div id="characterInfo" class="character-info" style="display:none;">
+      <img id="characterImage" src="" alt="Imagem do personagem" />
       <h2 id="characterName"></h2>
       <p><strong>Planeta Natal:</strong> <span id="characterPlanet"></span></p>
       <p><strong>Espécie:</strong> <span id="characterSpecies"></span></p>
@@ -31,6 +31,15 @@
     </div>
   </div>
 
+  <!-- Linha do tempo -->
+  <section id="timeline" class="timeline-container">
+    <h2>Ordem Cronológica de Star Wars</h2>
+    <div class="timeline-items" id="timelineItems">
+      <!-- Cards da timeline serão inseridos via script.js -->
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
+
