--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
     </div>
   </section>
 
+  <!-- Detalhes do filme ao clicar -->
+  <section id="filmDetails" style="display: none;" class="film-details">
+    <h2 id="filmTitle"></h2>
+    <p id="filmFullDescription"></p>
+    <h3>Personagens que aparecem:</h3>
+    <ul id="filmCharacters"></ul>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
-
